gitops/network/base/grafana-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-ui
  namespace: grafana
spec:
  parentRefs:
    - name: gw-internal-prod
      namespace: gateway-system
  hostnames:
    - grafana.k8s.homelab.grncunha.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
