gitops/network/base/victoria-logs-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs-ui
  namespace: victoria-logs
spec:
  parentRefs:
    - name: gw-internal-prod
      namespace: gateway-system
  hostnames:
    - victoria-logs.k8s.homelab.grncunha.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vls-victoria-logs-single-server
          port: 9428
